# taskweb

./: .env.example  .gitignore  Makefile  README.md  Taskfile.yml  flake.nix  justfile  pyproject.toml  treefmt.toml
.claude/: settings.json
.claude/hooks/: gitleaks.sh  treefmt.sh
.github/workflows/: test.yaml
config/: local.env  user.env
configs/: example.yaml
data/: taskrc
data/task/: backlog.data  pending.data  taskchampion.sqlite3  undo.data
scripts/: screenshots.py
taskweb/: __init__.py  __main__.py  cli.py  server.py  tasks.py
taskweb/static/: app.js  manifest.json  style.css  sw.js
taskweb/templates/: base.html  completed.html  db_missing.html  deleted.html  error.html  index.html  task_detail.html  task_edit.html  waiting.html
tests/: conftest.py  test_server.py  test_tasks.py
