[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "taskweb"
version = "0.1.0"
description = "A web interface for Taskwarrior"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "flask>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.15",
]

[project.scripts]
taskweb = "taskweb.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["taskweb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
